# crypto-core

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: alpha-release-checklist.md
.github/workflows/: ci.yml
cmake/: crypto_core-config.cmake.in
docs/: ROADMAP.md  algorithm-status.md  alpha-release-checklist.md  analysis-ci.md  api-contract.md  constant-time-notes.md  crypto-envelope-format.md  crypto-policy.md  fuzzing.md  key-lifecycle.md  p256-point-operation-audit.md  quickstart.md  release-evidence.md  release-integrity.md  release-notes.md  rsa-private-operation-audit.md  security-model.md  security-review-checklist.md
include/crypto_core/: aead.hpp  asymmetric.hpp  byte_buffer.hpp  cipher.hpp  crypto_core.hpp  encoding.hpp  error.hpp  hash.hpp  kdf.hpp  key.hpp  key_store.hpp  mac.hpp  memory.hpp  native_provider.hpp  openssl_provider.hpp  provider.hpp  result.hpp  rng.hpp  secure_buffer.hpp  version.hpp
include/crypto_core/internal/: aes.hpp  aes_cbc.hpp  aes_gcm.hpp  bigint.hpp  ec_der.hpp  ecdsa.hpp  ed25519.hpp  hmac.hpp  kdf.hpp  os_rng.hpp  p256.hpp  p256_fixed.hpp  rsa.hpp  rsa_der.hpp  rsa_fixed_bigint.hpp  rsa_oaep.hpp  rsa_pss.hpp  sha2.hpp
scripts/ci/: coverage.sh  fuzzing.sh  static-analysis.sh
src/: aead.cpp  aes.cpp  aes_cbc.cpp  aes_gcm.cpp  asymmetric.cpp  bigint.cpp  cipher.cpp  ec_der.cpp  ecdsa.cpp  ed25519.cpp  encoding.cpp  hash.cpp  hmac.cpp  kdf.cpp  kdf_native.cpp  key.cpp  key_store.cpp  mac.cpp  memory.cpp  native_provider.cpp  openssl_provider.cpp  os_rng.cpp  p256.cpp  p256_fixed.cpp  provider.cpp  rng.cpp  rsa.cpp  rsa_der.cpp  rsa_fixed_bigint.cpp  rsa_oaep.cpp  rsa_pss.cpp  sha2.cpp  version.cpp
tests/: aead_test.cpp  api_stability_test.cpp  asymmetric_api_test.cpp  cipher_test.cpp  encoding_test.cpp  foundation_test.cpp  fuzz_boundary_smoke_test.cpp  kdf_test.cpp  key_test.cpp  mac_test.cpp  native_aes_block_test.cpp  native_bigint_test.cpp  native_ecdsa_der_test.cpp  native_ecdsa_verify_test.cpp  native_ed25519_test.cpp  native_hash_test.cpp  native_p256_test.cpp  native_rsa_der_test.cpp  native_rsa_fixed_bigint_test.cpp  native_rsa_oaep_test.cpp  native_rsa_primitive_test.cpp  native_rsa_provider_test.cpp  native_rsa_pss_test.cpp  native_rsa_reference_vectors_test.cpp  openssl_provider_test.cpp  provider_api_test.cpp  rng_test.cpp  rsa_test_vectors.hpp  smoke_test.cpp  test_vectors.hpp  test_vectors_test.cpp
tests/corpus/invalid/: base64_bad_padding.txt  base64_invalid_character.txt  base64url_bad_padding.txt  base64url_standard_alphabet.txt  der_declared_length_too_long.der  pem_invalid_payload.pem  pem_mismatched_label.pem
tests/fuzz/: fuzz_parser_boundaries.cpp
tests/install_package_smoke/: CMakeLists.txt  smoke.cpp
